--- a/ListenToNBA/Class/Home/Controller/HomeViewController.xib
+++ b/ListenToNBA/Class/Home/Controller/HomeViewController.xib
@@ -1,13 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController">
             <connections>
+                <outlet property="tableView" destination="30Y-3p-zzP" id="pNk-Fm-8gc"/>
+                <outlet property="topView" destination="0e8-HO-5Wi" id="7cs-Az-nBH"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +20,41 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <subviews>
+                <view autoresizesSubviews="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0e8-HO-5Wi">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="260"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ListenNBA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cX8-7v-emF">
+                            <rect key="frame" x="147" y="40" width="81" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="cX8-7v-emF" firstAttribute="centerX" secondItem="0e8-HO-5Wi" secondAttribute="centerX" id="P4D-nZ-UkE"/>
+                        <constraint firstItem="cX8-7v-emF" firstAttribute="top" secondItem="0e8-HO-5Wi" secondAttribute="top" constant="40" id="jW1-ri-6oa"/>
+                        <constraint firstAttribute="height" constant="260" id="tBp-X0-weI"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="30Y-3p-zzP">
+                    <rect key="frame" x="0.0" y="195" width="375" height="472"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+            </subviews>
+            <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="30Y-3p-zzP" firstAttribute="top" secondItem="0e8-HO-5Wi" secondAttribute="bottom" constant="-65" id="9ar-Uv-8Pr"/>
+                <constraint firstItem="0e8-HO-5Wi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="FQX-vm-6TT"/>
+                <constraint firstAttribute="bottom" secondItem="30Y-3p-zzP" secondAttribute="bottom" id="S03-O0-6NJ"/>
+                <constraint firstAttribute="trailing" secondItem="30Y-3p-zzP" secondAttribute="trailing" id="chF-TS-K9C"/>
+                <constraint firstAttribute="trailing" secondItem="0e8-HO-5Wi" secondAttribute="trailing" id="jgI-Ye-Tdx"/>
+                <constraint firstItem="0e8-HO-5Wi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="o3A-9w-XRr"/>
+                <constraint firstItem="30Y-3p-zzP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="t8W-wb-8ku"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="33.5" y="101.5"/>
         </view>
     </objects>
 </document>
